Fixed issues with search bar

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <div class="search-container">
         <i class="ri-search-2-line"></i>
         <input type="text" placeholder="Search for a username">
-        <i class="ri-arrow-right-s-line"></i>
+        <button>
+            <i class="ri-arrow-right-s-line"></i>
+        </button>
     </div>
 </body>
 </html>
