Added an input event

--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="CSS/main.css">
     <title>User Finder</title>
 </head>
 <body>
     <div class="search-container">
         <i class="ri-search-2-line"></i>
-        <input type="text" placeholder="Search for a username">
-        <button>
+        <input type="text" placeholder="Search for a username" class="search-input">
+        <button class="search-button">
             <i class="ri-arrow-right-s-line"></i>
         </button>
     </div>
+    <script src="JS/main.js"></script>
 </body>
 </html>
