Added a function to fetch GitHub data from username

--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
             <i class="ri-arrow-right-s-line"></i>
         </button>
     </div>
+
+    <div class="user-infos-container">
+        <div class="user-infos github-user-infos">
+            <h1>GitHub Data</h1>
+        </div>
+    </div>
+
     <script src="JS/main.js"></script>
 </body>
 </html>
