Added GitHub user profile picture

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <div class="user-infos-container">
         <div class="user-infos github-user-infos">
             <h1>GitHub Data</h1>
+            <div class="github-avatar"></div>
         </div>
     </div>
 
