Added a CSS Grid for the GitHub data

--- a/index.html
+++ b/index.html
@@ -19,7 +19,19 @@
     <div class="user-infos-container">
         <div class="user-infos github-user-infos">
             <h1>GitHub Data</h1>
-            <div class="github-avatar"></div>
+            <div class="github">
+                <div class="github-avatar"></div>
+                <div class="github-data">
+                    <div class="github-name"><strong>Name</strong><br>Unknown</div>
+                    <div class="github-bio"><strong>Bio</strong><br>Unknown</div>
+                    <div class="github-email"><strong>Email</strong><br>Unknown</div>
+                    <div class="github-location"><strong>Location</strong><br>Unknown</div>
+                    <div class="github-company"><strong>Company</strong><br>Unknown</div>
+                    <div class="github-creation-date"><strong>Creation Date</strong><br>Unknown</div>
+                    <div class="github-followers"><strong>Followers</strong><br>Unknown</div>
+                    <div class="github-following"><strong>Following</strong><br>Unknown</div>
+                </div>
+            </div>
         </div>
     </div>
 
